p4/css/main.css
body{
  height: 100%;
  margin: 0;
  background-color: #FF00FF;
  overflow: scroll;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}
html {
    height: 100%;
    padding: 0;
}

.center-letter{
  width: 100vw;
  height: 50vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* TYPE */
@font-face {
 font-family: sohne;
 src: url(sohne-fett.woff2);
}

q {
  quotes: "“" "”" "‘" "’";
}
q::before {
    content: open-quote;
}
q::after {
    content: close-quote;
}

::selection {
    color: #fff;
    text-shadow: none;
    background: transparent;
}
text::selection {
    fill: #fff;
    text-shadow: none;
    background: transparent;
}

/* test */
.scroll-vidcont{
  margin: 0;
  position: fixed;
  padding: 0;
  height: 100vh;
  width: 100vw;
  overflow-x: hidden;
  z-index: -10;
  min-width: min-content;
}
.video-container{
  margin: 0;
  top: 0;
  /* position: absolute; */
  /* flex: 1; */
  display: grid;
  width: auto;
            /* height: 100vh; */
  grid-template-columns: repeat(80, auto);
            /* grid-auto-rows: 1; */
  align-items: flex-start;
  justify-content: flex-start;
  /* z-index: -10; */
  /* overflow: scroll; */
  overflow: scroll;
            /* overflow-x: auto; */
  min-width: 0%;
  max-width: 100%;
}

video{
  margin: 0;
  top: 0;
  height: 100vh;
  /* position: relative; */
  /* width: 3.055vw; */
  /* width: 1.667vw; */
  width: 100%;
  /* z-index: -10; */
  object-fit: fill;
  display: block;
}
  video.active{
    width: 80vw;
    /* transition: 0.1s ease-out; */
  }

video:hover{

}


/* TEXTTTTTTTTTTTTTTTTTTTTTTTTTTTT */
h1{
  font-family: sohne;
  font-size: 12.2rem;
  letter-spacing: -0.025em;
  line-height: 0.76;
  color: #ff1e00;
  text-align: left;
  margin: 0;
  mix-blend-mode: difference;
  margin-left: 0.8%;
  margin-top: 0.8%;
      margin-right: 0;
      margin-bottom: 0;
  z-index: -5;
  position: fixed;
}

h3{
  font-family: sohne;
  font-size: 1.35rem;
  letter-spacing: 0.05em;
  color: #ff1e00;
  text-transform: uppercase;
  text-align: left;
  margin-left: 0.8%;
  margin-top: 0.8%;
      margin-right: 0;
      margin-bottom: 0;
  position: fixed;


  mix-blend-mode: difference;
  padding-top: 3px;
  padding-left: 8px;
  padding-right: 5px;
  padding-bottom: 4px;
}
    .des{
      /* position: fixed; */
      mix-blend-mode: difference;
      z-index: -5;
      margin-top: 11.8%;
    }
      #des-mobile{
        display: none;
      }
    .category{
      /* position: fixed; */
      margin: 0;
      left: 0.8%;
      bottom: 0.8%;
      padding-left: 6px;
      display: block;
    }
        /* .category.cactive{
          display: block;
        } */
    .volume{
      position: fixed;
      right: 0.8%;
      text-align: center;
    }
    .volume:hover{
      cursor: pointer;
    }
      .increase{
        bottom: 5.8%;
        padding-right: 7px;
      }
      .decrease{
        bottom: 1.5%;
        padding-left: 10px;
        padding-right: 9px;
      }

h2{
  font-family: sohne;
  font-size: 12.2rem;
  letter-spacing: -0.025em;
  line-height: 0.76;
  color: #ff1e00;
  text-align: center;
  mix-blend-mode: difference;
  /* text-transform: uppercase; */

  /* padding-top: 20px;
  padding-left: 30px;
  padding-right: 30px;
  padding-bottom: 35px; */

  margin: 0;
}

      .key{
        text-align: center;
        display: flex;
        align-items: center;
        justify-content: center;
        mix-blend-mode: difference;
        height: 13rem;
        width: 100vw;
        position: fixed;
        top: 39.8vh;
        z-index: -10;
      }

        .show-pressed{
          display: block;
          /* width: 10%;
          height: 100%; */
          position: relative;
          mix-blend-mode: difference;

          /* -webkit-animation: bye 0.4s ease-out both;
        	        animation: bye 0.4s ease-out both;
                  animation-delay: 3s; */
        }
          /* .show-pressed.press{
            display: block;
            position: relative;
            z-index: -10;

    	-webkit-animation: bye 0.4s ease-out both;
    	        animation: bye 0.4s ease-out both;
              animation-delay: 3.5s;
          } */

@-webkit-keyframes bye {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes fbye {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}


/* MEDIA QUERIES PLS WORK PLS */
  @media (max-width: 1025px){
    h1{
      font-size: 5rem;
      margin-top: 3%;
      position: relative;
    }
    #des-mobile{
      font-size: 1rem;
      display: block;
      margin-top: 0%;
    }
    #des-desktop{
      display: none;
    }
    .video-container{
      margin: 0;
      top: 0;
      height: 100vh;
      width: 100vw;
      grid-template-columns: none;
      grid-template-rows: repeat(80, auto);
      position: fixed;
    }
    video{
      height: 100%;
      width: 100vw;
      min-height: 0%;
      max-height: 100%;
    }
      video.active-mob{
        width: 100vw;
        height: 40vh;
        /* transition: 0.1s ease-out; */
      }
  }

